# checkers

./: .pre-commit-config.yaml  README.MD  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  setup.cfg
auth_app/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
auth_app/templates/auth_app/: email_activation_result.html  email_confirm.html  email_template.html  logged_out.html  login.html  password_change_form.html  password_reset_complete.html  password_reset_done.html  password_reset_email.html  password_reset_form.html  register_form.html
config/: __init__.py  asgi.py  settings.py  urls.py
deploy_config/: __init__.py  asgi.py  settings.py
docker_config/: __init__.py  asgi.py  settings.py
front_config/: .djlintrc.json  lint-staged.config.js
nginx/conf.d/: checkers.conf
play/: __init__.py  admin.py  apps.py  constants.py  consumers.py  forms.py  models.py  play_helpers.py  routing.py  urls.py  utils.py  views.py
play/static/play/css/: base.css  style.css
play/static/play/js/: function.js  script.js  start.js
play/templates/play/: account.html  base.html  entry.html  index.html  profile.html  rating.html  start.html
play/templates/play/registration/: email_confirm.html  email_template.html  login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_email.html  password_reset_form.html  register_form.html
play/templates/play/samples/: footer.html  navbar.html  table_for_rating.html
play/templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  register_form.html
