[tool.poetry]
name = "checkers"
version = "0.1.0"
description = ""
authors = ["victro-nuzhniy <nuzhniyva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = ">=4.2"
python-dotenv = "^1.0.0"
channels = {extras = ["daphne"], version = "^4.0.0"}
channels-redis = "^4.1.0"
django-utils-six = "^2.0"
psycopg2-binary = "^2.9.9"
asyncpg = "^0.29.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^23.7.0"
flake8 = "5.0.4"
flake8-docstrings = "^1.7.0"
xenon = "^0.9.0"
isort = "^5.12.0"
mypy = "^1.4.1"
pre-commit = "3.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  | dist
  | .pytest_cache
  | .tox
  | docs
  | docs_src
  | .venv
  | .mypy_cache
)/
'''
include_trailing_comma = true
